refactor: 코드 품질 및 안정성 개선
- RecommendationServiceImpl: getReferenceById 반복 호출을 findAllById 일괄 조회로 교체
- StoreServiceImpl: CompletableFuture 그리드 쿼리에 10초 타임아웃 추가, 완료된 결과만 반환
- GlobalExceptionHandler: Exception/RuntimeException 핸들러를 ApiResponse 형식으로 통일, log.error 적용, ConstraintViolationException 핸들러 추가, MethodArgumentNotValidException에 field 오류 포함
- RecommendationController: 로컬 try-catch 제거, 전역 핸들러에 위임
- StoreController: @Validated 추가, 위경도·반경 범위 검증(@DecimalMin/Max)
- QuestionSearchController: @Validated 추가, query/question @NotBlank @Size(max=200) 검증
- System.out.println 제거: ForbiddenWordServiceImpl, ElasticServiceImpl, ElasticQuestionServiceImpl, OpenAIServiceImpl, QuestionRecommendationServiceImpl → log로 교체